--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						me arrancó notas bellas, jamás imaginadas</br>
 						entoné un canto como de sirenas</p>
 					Me hizo exhalar al viento, mi aliento,</br>
-					Enchinó mi piel, erizó mis vellos</p>
+					achinó mi piel, erizó mis vellos</p>
 					Elevó mi cuerpo y mi alma</br>
 					desde la dudosa tierra hasta el vago cielo</br>
 					en un instante sin saberlo surqué las nubes</br>
