--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input value="Send Message" class="button" type="submit"></li>
+							<li><input value="Send Message" class="button" type="submit"><a href="emailto:diriangen50929@yahoo.fr></a></li>
 						</ul>
 					</form>
 				</div>
