--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					&copy; Color Image Painting: <a href="https://templated.co/">by Miguel Bonilla</a>. Images: <a
-						href="https://unsplash.com/">by Miguel Bonilla</a>.
+					&copy; Color Image Painting: <a href="mailto:diriangen50929d@yahoo.fr">by Miguel Bonilla</a>. Images: <
+		#/">by Miguel Bonilla</a>.
 				</div>
 			</footer>
 		</section>
