--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<footer id="footer">
 				<div class="copyright">
 					&copy; Color Image Painting: <a href="mailto:diriangen50929d@yahoo.fr">by Miguel Bonilla</a>. Images: <
-		#/">by Miguel Bonilla</a>.
+		#">by Miguel Bonilla</a>.
 				</div>
 			</footer>
 		</section>
